[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamammoth"
version = "0.1.0"
description = "Official Python SDK for the DataMammoth API v2"
requires-python = ">=3.8"
dependencies = ["httpx>=0.24"]
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "DataMammoth", email = "dev@datamammoth.com"}]
keywords = ["datamammoth", "api", "sdk", "cloud", "hosting", "vps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://data-mammoth.com"
Documentation = "https://data-mammoth.com/api-docs"
Repository = "https://github.com/datamammoth/dm-python"
Issues = "https://github.com/datamammoth/dm-python/issues"
Changelog = "https://github.com/datamammoth/dm-python/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/datamammoth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
